fix: 修复多表列召回时窄表字段被截断丢失的问题
列召回原先将所有召回表合并为一次全局向量检索，TopK=表数×maxColumnsPerTable。
当召回表列数之和逼近该上限时（宽表列多会挤占额度），窄表相似度较低的列会被
静默丢弃，导致 planner 收到不完整 Schema、误判字段不存在。改为逐表召回，每张
表独享 maxColumnsPerTable 额度；并将 maxColumnsPerTable 50→300 以覆盖最宽表。